# xplugins_crypto-rs

./: Cargo.toml
data/: IPC_data.lua.G64  signed_license_db.txt
data/rsa_keys/x-plugins.com/: public.pem  public.pem.sig
examples/: g64_decrypt.rs  verify_sig.rs
examples/rsa_keys/: manifest.lua.txt  manifest.lua.txt.sig
examples/rsa_keys/x-aviation.com/: public_key.der
src/: debug.rs  g64.rs  lib.rs  pem.rs  rsa.rs
src/rsa/: public_key.rs
tests/: test_g64.rs  test_rsa.rs  verify_sig.rs
