[package]
name = "xplugins_crypto"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
hex-literal = "0.4.0"
md5 = "0.7.0"
rand = "0.8.5"
ring = "0.16.20" # RSA crypto?
sha1 = "0.10.5"
sha2 = "0.10.6"
libaes = "0.6.4"
hmac = "0.12.1"

[[example]]
name = "g64_decrypt"

[[example]]
name = "verify_sig"
